# gws_core

./: .docker-compose.yml  .gitignore  .gitlab-ci.yml  .key.pub  .mypy.ini  .public.json  .pylintrc  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  conftest.py  doc_manifest.json  docgen.sh  entrypoint.sh  env.sh  form_feature.md  gpm.py  gpm.sh  logfile  manage.py  pyproject.toml  requirements.txt  settings.json  setup.py  setup_nginx.sh  streamlit_test.py  test.md  test_python_log.py
.hooks/: post-start.py  (+7 more)
gws_cli/: README.md  pyproject.toml
gws_cli/gws_cli/: app_cli.py  brick_cli.py  brick_configure_service.py  claude_cli.py  community_cli.py  copilot_cli.py  dev_env_cli.py  doc_gws_cli.md  main_cli.py  reflex_cli.py  server_cli.py  streamlit_cli.py  task_cli.py  utils_cli.py
gws_cli/gws_cli/ai_code/: ai_code_service.py  claude_service.py  copilot_service.py  doc_ai_coding_tool.md  main_instructions.md
gws_cli/gws_cli/ai_code/claude/: __init__.py
gws_cli/gws_cli/ai_code/claude/statusline/: configure_statusline.py  statusline_command.sh
gws_cli/gws_cli/ai_code/commands/: agent-expert.md  code-review-instructions.md  nextflow-to-constellab.md  reflex-app-developer.md  snakemake-to-constellab.md  streamlit-app-developer.md  task-expert.md  update-doc-json.md  update-doc.md
gws_cli/gws_cli/ai_code/skills/: agent-expert.md  code-review-instructions.md  doc-editor.md  streamlit-app-developer.md  task-expert.md
gws_cli/gws_cli/ai_code/skills/brick-specific/: copilot-instructions.md
gws_cli/gws_cli/claude/: claude_service.py
gws_cli/gws_cli/claude/agents/: reflex-app-developer.md  reflex-app-developer.prompt.md  streamlit-app-developer.md  streamlit-app-developer.prompt.md  task-expert.md  task-expert.prompt.md
gws_cli/gws_cli/create_brick/brick_skeleton/: .gitignore
gws_cli/gws_cli/dev_env/: dev_env_cli_service.py  dev_env_service.py
gws_cli/gws_cli/dev_env/template/: conftest.py  extensions.json  launch.json  pyproject.toml  ruff.toml  settings.json
gws_cli/gws_cli/dev_env/template/notebook_template/: env.py
gws_cli/gws_cli/generate_brick/: create_brick.py  generate_brick.py
gws_cli/gws_cli/generate_brick/brick_skeleton/: .gitignore  .pylintrc  settings.json
gws_cli/gws_cli/generate_reflex_app/: generate_reflex_app.py
gws_cli/gws_cli/generate_reflex_app/_template/: dev_config.json  reflex_main.py  rxconfig.py  style.css
gws_cli/gws_cli/generate_streamlit_app/: generate_streamlit_app.py
gws_cli/gws_cli/generate_streamlit_app/_template/: generate_app_template.txt  state.py
gws_cli/gws_cli/generate_task/: create_task.py  generate_task.py  task_template.txt
gws_cli/gws_cli/mcp/: gws_core_loader.py  rag_mcp.py  rich_text_mcp.py
gws_cli/gws_cli/scripts/: install-claude-code.sh  install-node.sh
gws_cli/gws_cli/utils/: app_generator.py  app_task_generator.py  brick_cli_service.py  brick_configure_service.py  cli_utils.py  community_cli_service.py  dev_config_generator.py  gws_core_loader.py  node_service.py  screenshot_service.py  test_runner.py  typer_message_observer.py
gws_cli/gws_cli/utils/_template/: generate_app_template.txt
(+2334 files in other folders)
